refactor: (#50) 개행 수정 및 Stream.toList() 사용